# Kafka-Project

./: .gitignore  HateSpeech.ipynb  HateSpeechDetectionSpark.ipynb  README.md  data_generator.py  docker-compose.yaml  poetry.lock   pyproject.toml  pyspark_test.py  requirements.txt
data/room_1/: data.csv  dev.csv  test.csv  train.csv
lr_model.h5/metadata/: .part-00000.crc  part-00000
lr_model.h5/stages/0_HashingTF_d0049f28557a/metadata/: .part-00000.crc  part-00000
lr_model.h5/stages/1_IDF_931ec9fe06a6/data/: .part-00000-167e2377-a2d4-4275-a52f-2f97bebc4a70-c000.snappy.parquet.crc  part-00000-167e2377-a2d4-4275-a52f-2f97bebc4a70-c000.snappy.parquet
lr_model.h5/stages/1_IDF_931ec9fe06a6/metadata/: .part-00000.crc  part-00000
lr_model.h5/stages/2_LogisticRegression_ed20cdef8de1/data/: .part-00000-db0fdc0c-2102-4cf2-81d4-9cacef4bb7a2-c000.snappy.parquet.crc  part-00000-db0fdc0c-2102-4cf2-81d4-9cacef4bb7a2-c000.snappy.parquet
lr_model.h5/stages/2_LogisticRegression_ed20cdef8de1/metadata/: .part-00000.crc  part-00000
producers/: __init__.py  __main__.py
producers/application/: __init__.py  ports.py
producers/infrastructure/clients/: __init__.py  kafka.py  rabbitmq.py
producers/infrastructure/data_readers/: __init__.py  csv.py
producers/infrastructure/serializers/: __init__.py  bytes.py
rabbitmq/: Dockerfile
rabbitmq/config/: 20-defaults.conf  definitions.json
